# MOOS-Labs

./: README.md
missions/acoustics/: comAngle.moos
missions/alder/: alder.bhv  alder.moos  alder.moos++
missions/flocking/: follower.bhv  launch.sh  leader.bhv  shoreside.moos
missions/flocking-acomms/: launch.sh  vehicle.moos
missions/lab_06/alpha/: alpha.moos  eventlog
missions/lab_06/bravo_loiter/: bravo.bhv  bravo.moos  eventlog
missions/lab_06/bravo_loiter_dbl/: bravo.bhv  eventlog
missions/lab_06/bravo_loiter_uuv/: .alpha.bhv.swp  bravo.bhv  bravo.moos  eventlog  launch.sh
missions/lab_06/bravo_uuv_surface/: BHV_ConstantDepth.cpp  BHV_ConstantDepth.h  bravo.bhv  bravo.bhv.bak
moos-ivp-extend-acomms/: .bzrignore  CMakeLists.txt  README.md
moos-ivp-extend-acomms/.bzr/branch/: branch.conf  last-revision
moos-ivp-extend-acomms/.bzr/checkout/: dirstate
moos-ivp-extend-acomms/.bzr/repository/: pack-names
moos-ivp-extend-acomms/cmake_modules/: FindGoby.cmake
moos-ivp-extend-acomms/missions/acomms1/: launch.sh  meta_receiver.moos  meta_sender.moos  modem_id_table.txt  plug_pAcommsHandler.moos  targ_receiver.moos  targ_sender.moos
moos-ivp-extend-acomms/missions/acomms2/: goby_liaison.pb.cfg  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos  moos_gateway_g.pb.cfg  plug_pAcommsHandler.moos  targ_vehicle.moos
moos-ivp-extend-acomms/src/: CMakeLists.txt
moos-ivp-extend-acomms/src/codecs/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  codec_load.cpp  codec_load.h  passedtest.txt  varint.cpp  varint.h
moos-ivp-extend-acomms/src/ctd_tester/: CMakeLists.txt  main.cpp
moos-ivp-extend-acomms/src/pAcommsExample/: AcommsExample.cpp  AcommsExample.h  AcommsExample_ExampleConfig.cpp  AcommsExample_ExampleConfig.h  CMakeLists.txt  main.cpp  pAcommsExample.moos
moos-ivp-extend-acomms/src/pCoroner/: CMakeLists.txt  README  pCoroner.cpp  pCoroner.h  pCoroner.moos  pCoronerMain.cpp
moos-ivp-extend-acomms/src/protobuf/: CMakeLists.txt  acomms_example.proto  ctd.proto  ctd_default.proto  mini_command.proto
src/: CMakeLists.txt
src/pCommunicationAngle/: AcousticCalculator.cpp  AcousticCalculator.h  AcousticStruct.cpp  CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  CommunicationAngle_Info.cpp  CommunicationAngle_Info.h  main.cpp  pCommunicationAngle.moos
src/pOdometry/: .Odometry.cpp.swp  .Odometry.h.swp  CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pPrimeFactor/: CMakeLists.txt  CmakeListsBackup.txt  PrimeEntry.cpp  PrimeEntry.h  PrimeFactor.cpp  PrimeFactor.h  PrimeFactor_Info.cpp  PrimeFactor_Info.h  PrimeMap.cpp  PrimeMap.h  PrimeQueue.cpp  PrimeQueue.h  README.md  main.cpp  prime.moos
src/pPrimeFactorTester/: CMakeLists.txt  PrimeFactorTester.cpp  PrimeFactorTester.h  PrimeFactorTester_Info.cpp  PrimeFactorTester_Info.h  main.cpp
